--- a/cfstian.html
+++ b/cfstian.html
@@ -207,6 +207,19 @@
 							</ul>
 						</article>
 					</div>
+					
+					<div class="block-title">
+						<h2>Award Notification</h2>
+					</div>
+					<div class="sidebar-box-bg">
+						<article>
+							<ul>
+								<li>Notification Date: JULY 1, 2022</li>
+								<li>Winners will be announced on the conference website.</li>
+								<li>Each awarded team will receive the certificate from the IEEE TCCLD.</li>
+							</ul>
+						</article>
+					</div>
 
 					<div class="block-title">
 						<h2>Submission</h2>
