--- a/cfstian.html
+++ b/cfstian.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Call for Satellite Technology Innovation Award Nomination | 2022 IEEE Satellite</title>
+		<title>Call for IEEE Satellite Technology Innovation Award Nomination | 2022 IEEE Satellite</title>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
