--- a/program.html
+++ b/program.html
@@ -90,7 +90,7 @@
 							<div class="dropdown-menu navbar-dark bg-primary">
 								<a class="dropdown-item" href="cfp.html">Call for Papers</a>
 								<a class="dropdown-item" href="cfdap.html">Call for Demos and Posters</a>
-								<a class="dropdown-item" href="cfstian.html">Call for Satellite Technology Innovation
+								<a class="dropdown-item" href="cfstian.html">Call for IEEE Satellite Technology Innovation
 									Award Nomination</a>
 							</div>
 						</li>
