--- a/authors.html
+++ b/authors.html
@@ -170,7 +170,7 @@
 					</div>
 					<div class="sidebar-box-bg">
 						<p style="font-size: 1.1rem;">Call For Papers Is Available  <a href="cfp.html"> Here</a></p>
-						<p style="font-size: 1.1rem;">Call For Demos And Posters Is Available  <a href="cfdap.html"> Here</a></p>
+						<p style="font-size: 1.1rem;">Call for Short Papers and Demos Is Available  <a href="cfdap.html"> Here</a></p>
 						<p style="font-size: 1.1rem;">Call For IEEE Satellite Technology Innovation Award Nomination Is Available<a href="cfstian.html"> Here</a></p>
 						
 						<br/>
@@ -210,7 +210,7 @@
 					<div class="sidebar-box-ag">
 						<a style="display: block; font-size: 1.3rem; margin:4rem 0 1rem 0" href="cfp.html"> Call for
 							Papers </a>
-						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for Demos and Posters</a>
+						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for Short Papers and Demos</a>
 						<a style="display: block; font-size: 1.3rem;" href="cfdap.html">Call for IEEE Satellite Technology
 							Innovation Award Nomination</a>
 					</div>
