--- a/cfdap.html
+++ b/cfdap.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Call for Demos and Posters | 2022 IEEE Satellite</title>
+		<title>Call for Short Papers and Demos | 2022 IEEE Satellite</title>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -92,7 +92,7 @@
 									aria-haspopup="true" aria-expanded="false">Authors</a>
 								<div class="dropdown-menu navbar-dark bg-primary">
 									<a class="dropdown-item" href="cfp.html">Call for Papers</a>
-									<a class="dropdown-item" href="cfdap.html">Call for Demos and Posters</a>
+									<a class="dropdown-item" href="cfdap.html">Call for Short Papers and Demos</a>
 									<a class="dropdown-item" href="cfstian.html">Call for IEEE Satellite Technology Innovation
 										Award Nomination</a>
 								</div>
@@ -171,15 +171,12 @@
 				<!-- Main content -->
 				<div class="col-sm-9">
 					<div class="block-title">
-						<h2>Call for Demos and Posters</h2>
+						<h2>Call for Short Papers and Demos</h2>
 					</div>
 					<div class="sidebar-box-bg">
 						<article>
-							<p>Technical demonstration and poster sessions create opportunities for researchers and
-								engineers to showcase the innovative and original research and practice. IEEE SATELLITE
-								welcomes demonstrations and posters of technology that showcase prototypes and realistic
-								applications or validate crucial innovative research issues in technical topics of
-								interest including but not limited to:
+							<p> Short paper and demonstration sessions create opportunities for researchers and
+								engineers to showcase the innovative and original research and practice. IEEE SATELLITE welcomes short papers and demonstrations that validate crucial innovative research issues or showcase prototypes and realistic applications in technical topics of interest including but not limited to:
 							</p>
 
 							<ul>
@@ -208,10 +205,12 @@
 					<div class="sidebar-box-bg">
 						<article>
 							<h4 style="margin-bottom: 0rem;">Proposal Submission Deadline: </h4>
-							<p style="margin-bottom: 0;"><strong>Thursday, 25 August 2022</strong></p>
+							<p style="margin-bottom: 0;text-decoration: line-through"><strong>August 25, 2022</strong></p>
+							<p style="margin-bottom: 0;"><strong>September 25, 2022 (Firm Deadline)</strong></p>
 
 							<h4 style="margin-top: 1.2rem;">Proposal Acceptance Notification: </h4>
-							<p><strong>Sunday, 25 September 2022</strong></p>
+							<p style="text-decoration: line-through"><strong>September 25, 2022</strong></p>
+							<p><strong>October 25, 2022 (Firm Deadline)</strong></p>
 
 						</article>
 					</div>
@@ -221,10 +220,7 @@
 					</div>
 					<div class="sidebar-box-bg">
 						<article>
-							<p>Demo or poster proposals should be two pages following the IEEE formatting guidelines.
-								The proposals should be submitted via EasyChair submission system using this link. For
-								each accepted demo or poster, at least one author is required to register for IEEE
-								SATELLITE 2022 main conference and present their proposals.
+							<p>Short paper and Demo proposals should be two pages following the IEEE formatting guidelines. The proposals should be submitted via <a style="color: #4a4a4a;text-decoration: underline;" href="https://easychair.org/my/conference?conf=satellite2022">EasyChair submission system</a>. For each accepted short paper or demo, at least one author is required to register for IEEE SATELLITE 2022 main conference and present their proposals.
 							</p>
 
 						</article>
@@ -251,7 +247,7 @@
 					<div class="sidebar-box-ag">
 						<a style="display: block; font-size: 1.3rem; margin:4rem 0 1rem 0" href="cfp.html"> Call for
 							Papers </a>
-						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for Demos and Posters</a>
+						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for Short Papers and Demos</a>
 						<a style="display: block; font-size: 1.3rem;" href="cfstian.html">Call for IEEE Satellite Technology
 							Innovation Award Nomination</a>
 					</div>
