--- a/cfp.html
+++ b/cfp.html
@@ -93,7 +93,7 @@
 									aria-haspopup="true" aria-expanded="false">Authors</a>
 								<div class="dropdown-menu navbar-dark bg-primary">
 									<a class="dropdown-item" href="cfp.html">Call for Papers</a>
-									<a class="dropdown-item" href="cfdap.html">Call for Demos and Posters</a>
+									<a class="dropdown-item" href="cfdap.html">Call for Short Papers and Demos</a>
 									<a class="dropdown-item" href="cfstian.html">Call for IEEE Satellite Technology
 										Innovation
 										Award Nomination</a>
@@ -217,7 +217,7 @@
 					</div>
 					<div class="sidebar-box-bg">
 						<article>
-							<p>All papers should be submitted via EasyChair submission system using <a style="color: #4a4a4a;text-decoration: underline;" href="https://easychair.org/my/conference?conf=satellite2022">this link</a>. IEEE
+							<p>All papers should be submitted via <a style="color: #4a4a4a;text-decoration: underline;" href="https://easychair.org/my/conference?conf=satellite2022">EasyChair submission system</a>. IEEE
 								Satellite will incorporate a <strong>double-blind</strong> review process. All papers
 								must not include
 								authors’ names and affiliations or any other content revealing authors' information.
@@ -231,10 +231,7 @@
 								use letter or A4 size template.
 								Accepted papers will be allowed 2 additional pages in the proceedings.
 							</p>
-							<p>We also welcome <strong>Short Papers</strong> on any of the above topics, which will be
-								judged separately from papers in the research track of the conference. Submitted short
-								papers must be no longer than 2 pages. Accepted papers will not be allowed additional
-								pages in the proceedings.</p>
+							
 						</article>
 					</div>
 
@@ -259,8 +256,7 @@
 					<div class="sidebar-box-ag">
 						<a style="display: block; font-size: 1.3rem; margin:4rem 0 1rem 0" href="cfp.html"> Call for
 							Papers </a>
-						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for
-							Demos and Posters</a>
+						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for Short Papers and Demos</a>
 						<a style="display: block; font-size: 1.3rem;" href="cfstian.html">Call for IEEE Satellite Technology
 							Innovation Award Nomination</a>
 
