--- a/cfstian.html
+++ b/cfstian.html
@@ -92,7 +92,7 @@
 									aria-haspopup="true" aria-expanded="false">Authors</a>
 								<div class="dropdown-menu navbar-dark bg-primary">
 									<a class="dropdown-item" href="cfp.html">Call for Papers</a>
-									<a class="dropdown-item" href="cfdap.html">Call for Demos and Posters</a>
+									<a class="dropdown-item" href="cfdap.html">Call for Short Papers and Demoss</a>
 									<a class="dropdown-item" href="cfstian.html">Call for IEEE Satellite Technology Innovation
 										Award Nomination</a>
 								</div>
@@ -226,8 +226,7 @@
 					</div>
 					<div class="sidebar-box-bg">
 						<article>
-							<p>Every nomination package should be submitted via EasyChair submission system using this
-								link, and the subject is in the form of "Satellite Technology Innovation Award
+							<p>Every nomination package should be submitted via <a style="color: #4a4a4a;text-decoration: underline;" href="https://easychair.org/my/conference?conf=satellite2022">EasyChair submission system</a>, and the subject is in the form of "Satellite Technology Innovation Award
 								Nomination_nominee's/group's name".</p>
 							</br>
 							</br>
@@ -255,7 +254,7 @@
 					<div class="sidebar-box-ag">
 						<a style="display: block; font-size: 1.3rem; margin:4rem 0 1rem 0" href="cfp.html"> Call for
 							Papers </a>
-						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for Demos and Posters</a>
+						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for Short Papers and Demos</a>
 						<a style="display: block; font-size: 1.3rem;" href="cfstian.html">Call for IEEE Satellite Technology
 							Innovation Award Nomination</a>
 					</div>
