--- a/org_committee.html
+++ b/org_committee.html
@@ -91,7 +91,7 @@
 									role="button" aria-haspopup="true" aria-expanded="false">Authors</a>
 								<div class="dropdown-menu navbar-dark bg-primary">
 									<a class="dropdown-item" href="cfp.html">Call for Papers</a>
-									<a class="dropdown-item" href="cfdap.html">Call for Demos and Posters</a>
+									<a class="dropdown-item" href="cfdap.html">Call for Short Papers and Demos</a>
 									<a class="dropdown-item" href="cfstian.html">Call for IEEE Satellite Technology Innovation
 										Award Nomination</a>
 								</div>
