--- a/cfdap.html
+++ b/cfdap.html
@@ -220,7 +220,7 @@
 					</div>
 					<div class="sidebar-box-bg">
 						<article>
-							<p>Short paper and Demo proposals should be two pages following the IEEE formatting guidelines. The proposals should be submitted via <a style="color: #4a4a4a;text-decoration: underline;" href="https://easychair.org/my/conference?conf=satellite2022">EasyChair submission system</a>. For each accepted short paper or demo, at least one author is required to register for IEEE SATELLITE 2022 main conference and present their proposals.
+							<p>Short paper and Demo proposals should be two pages following the IEEE formatting guidelines. The proposals should be submitted via EasyChair submission system (https://easychair.org/my/conference?conf=satellite2022). For each accepted short paper or demo, at least one author is required to register for IEEE SATELLITE 2022 main conference and present their proposals.
 							</p>
 
 						</article>
