--- a/cfstian.html
+++ b/cfstian.html
@@ -226,7 +226,7 @@
 					</div>
 					<div class="sidebar-box-bg">
 						<article>
-							<p>Every nomination package should be submitted via <a style="color: #4a4a4a;text-decoration: underline;" href="https://easychair.org/my/conference?conf=satellite2022">EasyChair submission system</a>, and the subject is in the form of "Satellite Technology Innovation Award
+							<p>Every nomination package should be submitted via EasyChair submission system (https://easychair.org/my/conference?conf=satellite2022), and the subject is in the form of "Satellite Technology Innovation Award
 								Nomination_nominee's/group's name".</p>
 							</br>
 							</br>
