--- a/t_committee.html
+++ b/t_committee.html
@@ -233,6 +233,9 @@
 								<li>
 									<p><strong>Fangxin Wang</strong> (The Chinese University of Hong Kong (Shenzhen)) </p>
 								</li>
+								<li>
+									<p><strong>Yue Wang</strong> (Spacety Co., Ltd. (Changsha)) </p>
+								</li>
 							</ul>
 							</br>
 							</br>
