--- a/index.html
+++ b/index.html
@@ -108,8 +108,12 @@
 						<li class="nav-item ">
 							<a class="nav-link" href="program.html">Program</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="registration.html">Registration</a>
+						<li class="nav-item dropdown titleBar ">
+							<a class="nav-link dropdown-toggle " href="registration.html"
+								role="button" aria-haspopup="true" aria-expanded="false">Registration</a>
+							<div class="dropdown-menu navbar-dark bg-primary">
+								<a class="dropdown-item" href="registration_fee.html">Registration Fees</a>
+							</div>
 						</li>
 
 
